// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prefixer plugin should prefix nested objects 1`] = `
Object {
  ":hover": Object {
    "justifyContent": "center",
  },
  "display": "-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex",
}
`;

exports[`Prefixer plugin should prefix styles 1`] = `
Object {
  "display": "-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex",
  "justifyContent": "center",
}
`;
